Fixed detail in dropdown on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -394,8 +394,8 @@ video {
 		letter-spacing: 0.3em;
 	}
 
-	.nav_item, .social_icons {
-		padding: 0.5em 0;
+	.nav_item {
+		padding: 0.6em 0;
 	}
 
 	#nav_projects_dropdown {
